--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
   <!-- Navbar -->
   <nav class="flex justify-between items-center py-4 px-6 shadow-sm bg-white dark:bg-gray-800">
-      <a href="/" class="text-xl font-bold tracking-tight text-indigo-600 dark:text-indigo-400">
+      <a href="{% url 'blog:post_list' %}" class="text-xl font-bold tracking-tight text-indigo-600 dark:text-indigo-400">
         FaithBuilders
       </a>
 
