--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,8 @@
   <!-- Footer -->
   <footer class="text-center text-sm text-gray-400 py-6">
     &copy; {{ now|date:"Y" }} FaithBuilders. All rights reserved. 
+
+    {% if user.is_authenticated and user.is_staff %} 
       <a href="{% url 'cms:admin_dashboard' %}" 
     class="text-gray-400 hover:text-gray-600 text-sm transition duration-300">
     CMS
@@ -88,6 +90,7 @@
     class="text-gray-400 hover:text-gray-600 text-sm transition duration-300">
     API
     </a>
+    {% endif %}
   </footer>
 
   <!-- Bot button -->
